[package]
name = "NeoSTS"
version = "0.2.0"
edition = "2024"
build = "build.rs"
authors = ["Shimofuri-Sequence", "hiroo yoshioka"]
description = "NeoSTS timesheet editor"
license = "MIT"

[package.metadata.winresource]
FileDescription = "NeoSTS timesheet editor"
OriginalFilename = "NeoSTS.exe"
LegalCopyright = "Copyright (c) Shimofuri-Sequence, hiroo yoshioka"

[package.metadata.bundle]
name = "NeoSTS"
identifier = "org.bitbucket.satsuei.neosts"
icon = ["assets/NeoSTS_logo_512.png"]
short_description = "NeoSTS timesheet editor"
long_description = """
NeoSTS is a timesheet editor for working with STS-based animation timing sheets.
"""
copyright = "Copyright (c) Shimofuri-Sequence, hiroo yoshioka"
category = "public.app-category.developer-tools"

[workspace]
members = ["crates/sheet"]

[lib]
name = "neosts"

[[bin]]
name = "NeoSTS"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
encoding_rs = "0.8.35"
eframe = { version = "0.34.2", features = ["persistence"] }
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sheet = { path = "crates/sheet" }
thiserror = "2.0.12"
raw-window-handle = "0.6.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
core-graphics = "0.23.2"
objc2-core-services = { version = "0.3.2", features = ["AE", "AEDataModel", "objc2"] }
objc2-foundation = { version = "0.3.2", features = ["NSDate", "NSError", "NSAppleEventDescriptor", "NSString", "libc", "objc2-core-services"] }
winit = "0.30.13"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.31"
